feat: user models crud
