# models/user_basic.go
@@ -11,7 +11,7 @@ import (
 type UserBasic struct {
 	gorm.Model
 	Name          string
-	PassWord      string
+	Password      string
 	Phone         string
 	Email         string
 	Identity      string
@@ -35,4 +35,16 @@ func GetUserList() []*UserBasic {
 		fmt.Println(v)
 	}
 	return data
+}
+
+func CreateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Create(&user)
+}
+
+func DeleteUser(user UserBasic) *gorm.DB {
+	return utils.DB.Delete(&user)
+}
+
+func UpdateUser(user UserBasic) *gorm.DB {
+	return utils.DB.Model(&user).Updates(UserBasic{Name: user.Name, Password: user.Password})
 }
