# router/app.go
@@ -10,5 +10,8 @@ func Router() *gin.Engine {
 	r := gin.Default()
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserList)
+	r.POST("/user/createUser", service.CreateUser)
+	r.GET("/user/deleteUser", service.DeleteUser)
+	r.POST("user/updateUser", service.UpdateUser)
 	return r
 }
